--- a/package.json
+++ b/package.json
@@ -9,28 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.1.0",
+    "@pbe/react-yandex-maps": "^1.2.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@types/react-native": "^0.72.2",
     "expo": "~48.0.18",
+    "expo-location": "~15.1.1",
+    "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-location": "~15.1.1",
-    "expo-permissions": "~14.1.1"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@yandex/ymaps3-types": "^0.0.7",
+    "react-native-dotenv": "^3.4.8",
     "typescript": "^4.9.4"
   },
   "private": true
