--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "typeRoots": [
+      "./node_modules/@yandex/ymaps3-types",
+    ],
+    "paths": {
+      "ymaps3/*": [
+        "./node_modules/@yandex/ymaps3-types/"
+      ]
+    },
+    "strict": true,
   }
 }
